[package]
name = "kotoba-atelier"
version = "0.1.0"
description = "Personal AI Japanese reading daily"
authors = ["xtnntn"]
edition = "2021"

[lib]
name = "kotoba_atelier_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
